# notes_be

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  .pylintrc  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTORS.md  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  note.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/api/v1/endpoints/: __init__.py  auth.py  backoffice.py  healthcheck.py  notes.py  oauth.py  users.py
app/core/: security.py  settings.py  setup.py
app/core/exceptions/: generic.py
app/core/middleware/: rate_limit.py
app/db/: mysql.py
app/db/models/: __init__.py
app/db/models/audit/: model.py
app/db/models/auth/: model.py
app/db/models/notes/: model.py
app/db/models/user/: model.py
app/dto/audit/: audit_dto.py
app/dto/note/: note_dto.py
app/dto/user/: user_dto.py
app/email/: email_service.py
app/repositories/auth/common/: services.py
app/repositories/auth/login/: repository.py
app/repositories/auth/oauth/google/: repository.py
app/repositories/auth/reset/: repository.py
app/repositories/backoffice/: repository.py
app/repositories/note/: repository.py
app/repositories/note/cache/: repository.py
app/repositories/user/: repository.py
app/schemas/auth/: request.py
app/schemas/user/: request.py
docs/: Architecture.md  alembic_cheatsheet.md  cheatsheets.md
sql/: create.sql  create_user.sql  drop.sql  reset.sql  seed.sql  truncate.sql
test/: __init__.py  audit.py  auth.py  conftest.py  note.py
test/endpoints/: test_auth.py  test_notes.py
