[project]
name = "albz-notes-be"
version = "1.1.0"
description = "FastAPI backend for a notes application with JWT authentication"
requires-python = ">=3.12"
dependencies = [
    "annotated-types>=0.7,<1",
    "anyio>=4.6,<5",
    "click>=8.1,<9",
    "fastapi>=0.115,<1",
    "h11>=0.14,<1",
    "idna>=3.10,<4",
    "pydantic>=2.9,<3",
    "pydantic-core>=2.23,<3",
    "sniffio>=1.3,<2",
    "starlette>=0.41,<1",
    "typing-extensions>=4.12,<5",
    "uvicorn>=0.32,<1",
    "python-multipart>=0.0.18,<1",
    "pymysql>=1.1,<2",
    "alembic>=1.14,<2",
    "bcrypt>=4.2,<5",
    "mysql-connector-python>=9.1,<10",
    "python-dotenv>=1.0,<2",
    "sqlalchemy>=2.0,<3",
    "pyjwt>=2.9,<3",
    "passlib>=1.7,<2",
    "cryptography>=42.0,<43",
    "requests>=2.32,<3",
    "fastapi-mail>=1.4,<1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pylint>=3.0,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
